chore(.gitignore): 프로젝트 실행파일 추가

--- a/.gitignore
+++ b/.gitignore
@@ -164,4 +164,8 @@ tags
 .history
 .ionide
 
+### Project binary file ###
+ircserv
+*/ircserv
+
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,c++,c,cmake,macos,vim
